--- a/public/css/style.css
+++ b/public/css/style.css
@@ -464,9 +464,11 @@ navbar .logo {
   bottom: 10px;
   position: absolute;
   font-weight: bold;
-  left: 10px;
   top: 40%;
-  left: 45%;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
 }
 .container-room .left-cont .video-cont .video-box .mute-icon {
   color: #d63434;
@@ -507,9 +509,11 @@ navbar .logo {
   bottom: 10px;
   font-weight: bold;
   position: absolute;
-  left: 10px;
   top: 40%;
-  left: 45%;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
 }
 .container-room .left-cont .video-cont-single .video-box .mute-icon {
   color: #d63434;
